[package]
name = "h_time"
version = "0.1.0"
edition = "2021"
authors = ["Baehyunsol <baehyunsol@naver.com>"]
description = "Time/Date/Calendar library for Rust"
license = "MIT"
keywords = ["time", "date", "calendar"]
repository = "https://github.com/baehyunsol/h_time"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.23"
lazy_static = "1.4.0"